add npm to ignore pattern

--- a/.github/link-check-config.json
+++ b/.github/link-check-config.json
@@ -23,6 +23,9 @@
     },
     {
       "pattern": "^https://x\\.com/"
+    },
+    {
+      "pattern": "^https://www\\.npmjs\\.com/package/@onamfc(/.*)?$"
     }
   ],
   "httpHeaders": [
